ACLOCAL_AMFLAGS=-I m4

noinst_HEADERS =

MANPAGES = 

man_MANS = ${MANPAGES}

EXTRA_DIST = ${MANPAGES}

bin_PROGRAMS = lassort lasindex lastobam reformatfasta fasta2fastq lasroleswap bamtolas blasrtobam lascat lasmarkprimary call.damapper lasaligntotracepoints lasfilterquality \
	laschainsort lasmerge
dist_bin_SCRIPTS = swappedLasToBAM.sh

lasindex_SOURCES = lasindex.cpp
lasindex_LDADD = ${LIBMAUS2LIBS}
lasindex_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
lasindex_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

lassort_SOURCES = lassort.cpp
lassort_LDADD = ${LIBMAUS2LIBS}
lassort_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
lassort_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

lastobam_SOURCES = lastobam.cpp
lastobam_LDADD = ${LIBMAUS2LIBS}
lastobam_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
lastobam_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

reformatfasta_SOURCES = reformatfasta.cpp
reformatfasta_LDADD = ${LIBMAUS2LIBS}
reformatfasta_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
reformatfasta_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

fasta2fastq_SOURCES = fasta2fastq.cpp
fasta2fastq_LDADD = ${LIBMAUS2LIBS}
fasta2fastq_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
fasta2fastq_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

lasroleswap_SOURCES = lasroleswap.cpp
lasroleswap_LDADD = ${LIBMAUS2LIBS}
lasroleswap_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
lasroleswap_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

bamtolas_SOURCES = bamtolas.cpp
bamtolas_LDADD = ${LIBMAUS2LIBS}
bamtolas_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
bamtolas_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

blasrtobam_SOURCES = blasrtobam.cpp
blasrtobam_LDADD = ${LIBMAUS2LIBS}
blasrtobam_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
blasrtobam_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

lascat_SOURCES = lascat.cpp
lascat_LDADD = ${LIBMAUS2LIBS}
lascat_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
lascat_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

lasmarkprimary_SOURCES = lasmarkprimary.cpp
lasmarkprimary_LDADD = ${LIBMAUS2LIBS}
lasmarkprimary_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
lasmarkprimary_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

call_damapper_SOURCES = call.damapper.cpp
call_damapper_LDADD = ${LIBMAUS2LIBS}
call_damapper_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
call_damapper_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

lasaligntotracepoints_SOURCES = lasaligntotracepoints.cpp
lasaligntotracepoints_LDADD = ${LIBMAUS2LIBS}
lasaligntotracepoints_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
lasaligntotracepoints_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

lasfilterquality_SOURCES = lasfilterquality.cpp
lasfilterquality_LDADD = ${LIBMAUS2LIBS}
lasfilterquality_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
lasfilterquality_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

laschainsort_SOURCES = laschainsort.cpp
laschainsort_LDADD = ${LIBMAUS2LIBS}
laschainsort_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
laschainsort_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

lasmerge_SOURCES = lasmerge.cpp
lasmerge_LDADD = ${LIBMAUS2LIBS}
lasmerge_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
lasmerge_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}
